--- a/template/public/assets/styles/main.css
+++ b/template/public/assets/styles/main.css
@@ -51,8 +51,8 @@ h5 {
         width: 50rem;
         margin-top: auto; }
   .main-container .main-container__right {
-    background: #529EE4;
     width: 30%;
+    background: #529EE4;
     color: white;
     padding-right: 1rem;
     padding-left: 1rem; }
@@ -142,4 +142,138 @@ h5 {
   .main-container__right form input[type="submit"]:hover {
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
+
+.page-container {
+  max-width: 144rem;
+  margin: 0px auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%; }
+
+.header {
+  background: #529EE4;
+  padding-left: 5%;
+  padding-right: 5%;
+  display: flex;
+  justify-content: space-between; }
+  .header .logout {
+    align-self: flex-end;
+    margin-bottom: .5rem;
+    color: white;
+    text-decoration: none; }
+
+.main {
+  display: flex;
+  flex: 1; }
+  .main .content {
+    width: 85%;
+    padding-left: 30px;
+    padding-right: 30px;
+    background: #F3F3F3; }
+    .main .content__header {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      align-items: flex-start; }
+      .main .content__header .content__open-account {
+        font-weight: bold;
+        padding: .5rem;
+        border-radius: .5rem;
+        border: 1px solid #529EE4; }
+      .main .content__header .content__profile {
+        display: flex;
+        align-items: center; }
+        .main .content__header .content__profile img {
+          border-radius: 50%;
+          height: 65px;
+          width: 65px;
+          border: 1px solid #529EE4;
+          margin-right: 5px; }
+        .main .content__header .content__profile .profile__info p {
+          margin: 0;
+          font-size: 12px; }
+        .main .content__header .content__profile .profile__info .name {
+          font-weight: bold;
+          font-size: 14px;
+          margin-bottom: 5px; }
+    .main .content__accounts {
+      display: flex; }
+      .main .content__accounts .account {
+        background: #EBE3E3;
+        height: 10rem;
+        width: 20rem;
+        padding: .5rem;
+        border-radius: .5rem;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        margin: .5rem; }
+        .main .content__accounts .account p {
+          margin: 0; }
+        .main .content__accounts .account p:nth-child(1) {
+          margin-bottom: 1rem;
+          display: flex;
+          justify-content: flex-end; }
+
+.footer {
+  background: #529EE4;
+  height: 45px;
+  text-align: center; }
+
+/* ================================= 
+  Media Queries
+==================================== */
+@media only screen and (max-width: 600px) {
+  .main .content {
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: .5rem;
+    height: 100%;
+    padding-bottom: 5rem; }
+    .main .content__header,
+    .main .content #profile p {
+      font-size: 11px; }
+    .main .content__profile {
+      order: -1; }
+    .main .content__open-account {
+      margin-top: 2rem; }
+    .main .content__header, .main .content__accounts {
+      flex-direction: column;
+      align-items: center; }
+    .main .content #profile img {
+      height: 45px;
+      width: 45px; }
+    .main .content__accounts {
+      font-size: 1.2rem; } }
+
+.side-nav {
+  background: #EBE3E3;
+  display: flex;
+  flex-direction: column;
+  width: 15%; }
+  .side-nav__link {
+    text-decoration: none;
+    display: block;
+    margin-top: 80px; }
+  .side-nav__link:hover {
+    background: #F3F3F3; }
+  .side-nav__link-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .side-nav__icon {
+    height: 40px;
+    width: 40px; }
+
+@media only screen and (max-width: 600px) {
+  .side-nav {
+    width: 25%;
+    justify-content: space-around; }
+    .side-nav__link {
+      margin-top: 0;
+      font-size: 11px;
+      padding-left: 0; }
+    .side-nav__icon {
+      height: 25px;
+      width: 25px; } }
 
