feat(template): Design transactions page
[Finishes #168836779]

--- a/template/src/styles/main.scss
+++ b/template/src/styles/main.scss
@@ -2,3 +2,4 @@
 @import './modules/landingpage.scss';
 @import './modules/client-dashboard.scss';
 @import './modules/side-nav.scss';
+@import './modules/transactions.scss'
