--- a/template/template/index.html
+++ b/template/template/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="main-container">
     <div class="main-container__left">
-      <span class="logo">Ban<span class="logo--blue">ka</span></span>
+      <a href="../" class="logo">Ban<span class="logo--green">ka</span></a>
       <p class="main-container__left__message">
         Just some random text here to make this landing page look cool
       </p>
@@ -24,7 +24,7 @@
 
     <div class="main-container__right">
       <div class="main-container__right__header">
-        <span class="logo">Ban<span class="logo--white">ka</span></span>
+        <a href="../" class="logo logo--white">Ban<span class="logo--green">ka</span></a>
         <span class="login-here"><a href="./pages/login.html">Login Here</a></span>
       </div>
       <h1 class="main-container__right__heading">Open an account Today!</h1>
