--- a/template/template/pages/dashboard.html
+++ b/template/template/pages/dashboard.html
@@ -13,21 +13,21 @@
 <body>
   <div class="page-container">
     <div class="header">
-      <a href="../" class="logo">Ban<span class="logo--white">ka</span></a>
+      <a href="../" class="logo logo--white">Ban<span class="logo--green">ka</span></a>
       <a href="../" class="logout">Logout</a>
     </div>
 
     
     <div class="main">
       <div class="side-nav">
-        <a href="#" class="side-nav__link">
+        <a href="./dashboard.html" class="side-nav__link">
           <div class="side-nav__link-content-wrapper">
             <img src="../assets/images/money.svg" alt="Accounts" class="side-nav__icon">
             <span class="side-nav__text">Accounts</span>
           </div>
         </a>
 
-        <a href="#" class="side-nav__link">
+        <a href="./transactions.html" class="side-nav__link">
           <div class="side-nav__link-content-wrapper">
             <img src="../assets/images/money.svg" alt="Accounts" class="side-nav__icon">
             <span class="side-nav__text">Transactions</span>
@@ -46,7 +46,7 @@
       <div class="content">
         <div class="content__header">
           <div class="content__open-account">
-            <span class="open-account">New account</span>
+            <button class="open-account" id="btn__open-account">Open Account</button>
           </div>
           <div class="content__profile" id="profile">
             <img src="../assets/images/profilepic.jpg" alt="">
