--- a/template/template/pages/register.html
+++ b/template/template/pages/register.html
@@ -13,7 +13,7 @@
 <body>
   <div class="main-container">
     <div class="main-container__left">
-      <a href="../" class="logo">Ban<span class="logo--blue">ka</span></a>
+      <a href="../" class="logo">Ban<span class="logo--green">ka</span></a>
       <p class="main-container__left__message">
         Just some random text here to make this landing page look cool
       </p>
@@ -24,11 +24,11 @@
 
     <div class="main-container__right">
       <div class="main-container__right__header">
-        <a href="../" class="logo">Ban<span class="logo--white">ka</span></a>
+        <a href="../" class="logo logo--white">Ban<span class="logo--green">ka</span></a>
         <span class="login-here"><a href="./login.html">Login</a></span>
       </div>
       <h1 class="main-container__right__heading">Create a free account</h1>
-      <form>
+      <form action="dashboard.html">
         <input type="text" placeholder="First Name" name="firstName" />
         <input type="text" placeholder="Last Name" name="lastName" />
         <input type="text" placeholder="Email" name="email" />
