--- a/template/src/styles/modules/side-nav.scss
+++ b/template/src/styles/modules/side-nav.scss
@@ -1,6 +1,7 @@
 .side-nav {
   // background: #C4C4C4;
-  background: #EBE3E3;
+  // background: #EBE3E3;
+  background: #565695;
   display: flex;
   flex-direction: column;
   width: 15%;
@@ -9,10 +10,13 @@
     text-decoration: none;
     display: block;
     margin-top: 80px;
+    color: white;
   }
 
   &__link:hover {
     background: #F3F3F3;
+    color: greenyellow;
+    font-weight: bold;
   }
 
   &__link-content-wrapper {
