--- a/src/components/layout/Landing/landing.scss
+++ b/src/components/layout/Landing/landing.scss
@@ -1,52 +1,19 @@
-*
-{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-body {
-    font-family: 'Lato', 'Arial', sans-serif;
-    font-weight: 300;
-}
+// body {
+//     font-family: 'Lato', 'Arial', sans-serif;
+//     font-weight: 300;
+// }
 .landing {
-    // background-image: linear-gradient(#362066, #362066cc), url(../../../img/hero.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero.jpg);
+    // background-image: linear-gradient(#362066, #362066cc), url(../../../img/hero3.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero3.jpg);
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 70vh;
 }
 
-
-
-.navbar-nav .nav-item .nav-link {
-    color: white;
-    margin: 2px;
-    text-align: center;
-}
-
-.navbar {
-    // position: fixed;
-    width: 100%;
-    height: 8%;
-}
-
-.navbar .navbar-nav {
-    border-bottom: 2px solid white;
-}
-
-.navbar .navbar-brand {
-    color: white;
-    font-size: 3.2rem;
-}
 
 .pt-10 {
     padding-top: 6rem!important;
 }
-
-// .navbar-nav .nav-item .register-btn {
-//     border-radius: 35px;
-//     padding: 5px 30px;
-// }
 
 .hero-container {
     color: white;
@@ -55,60 +22,128 @@ body {
     height: 92%;
 }
 
+
+.header-container {
+    width: 50%;
+    margin: 0 auto; 
+    text-align: center;
+}
 .header {
-    font-size: 7.5rem;
-    margin-top: 100px;
+    font-size: 4.8rem;
+    margin-top: 70px;
     margin-bottom: 20px;
+    p {
+        font-size: 18px;
+        margin-bottom: 30px;
+        letter-spacing: 1px;
+    }
 }
 
-p {
-    font-size: 18px;
-    margin-bottom: 30px;
-    letter-spacing: 1px;
-}
+
+
 .btn {
     padding: 10px 20px;
     margin-right: 5px;
     font-size: 15px;
 }
 
-.btn:first-child {
-    color: red;
-    opacity: .5;
-}
 
 
 
 
 // ================
 .section2-container {
-    // border: 1px solid red;
-    // margin-top: -100px;
-    // background: #000000;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.842), rgba(0, 0, 0, 0.842)), url(../../../img/happy_clients.jpg);
-    background-size: cover;
-    background-position: center;
-    // background-color: #000;
-    // opacity: .5;
+    background-color: #F6F6F6;
     text-align: center;
-    color: white;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    // color: white;
 }
 .section2 {
     display: flex;
-    justify-content: space-between;
-    div {
-        border: 1px solid white;
-        width: 24%;
-        height: 200px;
+    flex-wrap: wrap;
+    justify-content: space-between; 
+    .box {
+        border: 1px solid #e8e8e8;
+        width: 33%;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        margin-bottom: 20px;
+        background-color: white;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        box-shadow: .5rem .5rem rgba(0, 0, 0, 0.2);    
 
+        img {
+            width: 50px;
+            height: 50px;
+        }
+        a:hover,
+        img:hover {
+            color: white;
+            text-decoration: none;
+        }
+
+    }
+    .box:hover {
+        background: #007bff;
+        border-color: #007bff;
+        color: white;
     }
 
     .content {
         color: red;
         align-self: center;
         // display: flex;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .landing {
+        height: 568px;
+    }
+    .header-container {
+        width: 70%;
+    }
+    .header {
+        font-size: 3.5rem;
+    }
+    
+    .section2 .box {
+        width: 45%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .landing {
+        height: 100vh;
+    }
+    .header-container {
+        width: 90%;
+    }
+    .header {
+        font-size: 3rem;
+    }
+
+    .section2 .box {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        // display: flex;
+        // flex-direction: row;
+
+        .icon-wrapper {
+            margin-left: 20px;
+        }
+
+        a {
+            display: flex;
+        }
+        h3 {
+            align-self: center;
+            margin-left: 20px;
+            text-align: left;
+        }
     }
 }
