--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,3 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
-  
 *,
 *::after,
 *::before {
@@ -15,25 +6,12 @@
   box-sizing: border-box;
 }
 
-:root {
-  --primary-color: greenyellow;
-  --primary-color2: #144499;
-  --primary-color-light: #565695;
-  --primary-color-light2: #aeaed1;
-  --dark: #222632;
-  --dark2: #343477;
-}
-
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-  font-size: 1.5rem;
-  font-family: "Roboto";
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-size: 1.5rem;
+    font-family: 'Lato', 'Arial', sans-serif;
+    font-weight: 300;
 }
