--- a/src/components/layout/Landing/landing.scss
+++ b/src/components/layout/Landing/landing.scss
@@ -1,7 +1,3 @@
-// body {
-//     font-family: 'Lato', 'Arial', sans-serif;
-//     font-weight: 300;
-// }
 .landing {
     // background-image: linear-gradient(#362066, #362066cc), url(../../../img/hero3.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero3.jpg);
@@ -138,7 +134,6 @@
             }
     
             span {
-                // font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
                 line-height: 26px;
@@ -164,6 +159,103 @@
         }
     }
 }
+
+
+// Section 4
+.section-4-container {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 50px;
+
+    .section-4-box {
+        width: 48%;
+
+        img {
+            width: 100%;
+            border-radius: 8px;
+            height: auto;
+        }
+
+        h3 {
+            font-size: 2.2rem;
+            font-weight: bold;
+            line-height: 34px;
+        }
+    }
+}
+
+
+// Footer 
+footer {
+    background: #181818;
+    color: #d0d0df;
+    padding: 20px 0;
+
+    h5 {
+        font-weight: bold;
+        text-transform: uppercase;
+        padding-bottom: 5px;
+        margin-bottom: 10px;
+        border-bottom: 1px solid #d0d0df;
+        display: inline-block;
+        color: white;
+    }
+
+    .footer-top-section {
+        display: flex;
+        justify-content: space-between;
+        @media only screen and (max-width: 600px) {
+            & {
+                max-width: 400px;
+                flex-wrap: wrap;
+                justify-content: space-between;
+
+                div {
+                    margin-bottom: 20px;
+                    margin-right: 15px;
+                    margin-left: 15px;
+                }
+            }
+        }
+
+        ul {
+            list-style-type: none;
+            li {
+                font-weight: 400;
+            }
+        }
+
+        .apps-container img {
+            width: 100px;
+            height: 40px;
+        }
+
+        .social-btn-container {
+            display: flex;
+            a {
+                font-size: 15px;
+                color: #000;
+                width: 25px;
+                height: 25px;
+                line-height: 25px;
+                background: #FFF;
+                border-radius: 50%;
+                text-align: center;
+                margin-right: 15px;
+            }
+        }
+    }
+
+    .footer-bottom-section {
+        border-top: 1px solid #d0d0df;
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 0 5px 0;
+        margin-top: 20px;
+    }
+}
+
+
 
 // Mobile
 
