--- a/src/components/layout/Landing/landing.scss
+++ b/src/components/layout/Landing/landing.scss
@@ -69,7 +69,8 @@
         background-color: white;
         padding-top: 10px;
         padding-bottom: 10px;
-        box-shadow: .5rem .5rem rgba(0, 0, 0, 0.2);    
+        // box-shadow: .5rem .5rem rgba(0, 0, 0, 0.2);    
+        box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
 
         img {
             width: 50px;
@@ -188,6 +189,7 @@
 // Footer 
 footer {
     background: #181818;
+    // background: #362066;
     color: #d0d0df;
     padding: 20px 0;
 
@@ -286,24 +288,24 @@ footer {
         font-size: 3rem;
     }
 
-    .section2 .box {
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-        // display: flex;
-        // flex-direction: row;
+    // .section2 .box {
+    //     width: 80%;
+    //     margin-left: auto;
+    //     margin-right: auto;
+    //     // display: flex;
+    //     // flex-direction: row;
 
-        .icon-wrapper {
-            margin-left: 20px;
-        }
+    //     .icon-wrapper {
+    //         margin-left: 20px;
+    //     }
 
-        a {
-            display: flex;
-        }
-        h3 {
-            align-self: center;
-            margin-left: 20px;
-            text-align: left;
-        }
-    }
+    //     a {
+    //         display: flex;
+    //     }
+    //     h3 {
+    //         align-self: center;
+    //         margin-left: 20px;
+    //         text-align: left;
+    //     }
+    // }
 }
