feat(auth): add sign-in component

--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -103,11 +103,15 @@
                     background-color: #55acee;
                     border-color: #55acee;
                 }
-
                 .fa-facebook {
                     color: #fff;
                     background-color: #3b5998;
                     border-color: #3b5998;
+                }
+                .fa-google {
+                    color: #fff;
+                    background-color: #d93025;
+                    border-color: #d93025;
                 }
             }
 
@@ -125,7 +129,7 @@
             }
 
             .hav-acct {
-                font-size: 1.1rem;
+                font-size: 1.4rem;
                 text-align: center;
             }
 
