--- a/src/components/layout/Landing/landing.scss
+++ b/src/components/layout/Landing/landing.scss
@@ -1,6 +1,6 @@
 .landing {
-    // background-image: linear-gradient(#362066, #362066cc), url(../../../img/hero3.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero3.jpg);
+    // background-image: linear-gradient(#362066, #362066cc), url(../../../img/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero.jpg);
     background-size: cover;
     background-position: center;
     height: 70vh;
