--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -1,10 +1,35 @@
 .menu-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
-    .menu-item p {
-        border-bottom: 1px solid blue;
+    .menu-item {
+        text-align: center;
+        margin-bottom: 5px;
+        padding-left: 5px;
+        padding-right: 5px;
+        // color: #362066c9;
+        color: grey;
+
+        .item {
+            font-size: 1.2rem;
+            font-weight: bold;
+        }
     }
+    .icon {
+        font-size: 2.5rem;
+    }
+
+    .active-menu {
+        background: #F6F6F6;
+    }
+
+    .menu-item:hover{
+        background: #F6F6F6;
+    }
+
+    // .menu-item p {
+    //     border-bottom: 1px solid blue;
+    // }
 }
 
 .full-width {
@@ -18,17 +43,16 @@
     .side-bar,
     .main-content {
         border-radius: 10px;
-        padding: 20px
+        padding: 20px;
+        border: 1px solid grey;
     }
 
     .side-bar {
         width: 30%;  
-        // text-align: center;
 
         .profile-img-container {
             height: 100px;
             width: 100px;
-            // margin: auto auto;
 
             img {
                 width: 100%;
@@ -40,5 +64,46 @@
     }
     .main-content {
         width: 65%;
+    }
+
+    .open-account {
+        display: flex;
+        border: 1px solid #00448B;
+        width: 250px;
+        // height: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 50px;
+        padding: 40px;
+        border-radius: 10px;
+
+        .btn {
+            background-color: #00448B;
+            border: 1px solid #00448B;
+        }
+    }
+}
+
+
+@media only screen and (max-width: 767px) {
+    .dashboard-contents {
+        flex-direction: column;
+
+        .side-bar,
+        .main-content {
+            width: 95%;
+            margin-bottom: 15px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .side-bar {
+            margin-left: auto;
+            margin-right: auto;
+
+            .detailed-info {
+                display: none;
+            }
+        }
     }
 }
