--- a/src/components/layout/Landing/landing.scss
+++ b/src/components/layout/Landing/landing.scss
@@ -1,11 +1,29 @@
-.landing {
-    // background-image: linear-gradient(#362066, #362066cc), url(../../../img/hero.jpg);
+// .landing {
+//     background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero.jpg);
+//     background-size: cover;
+//     background-position: center;
+//     height: 100vh;
+
+//     @media only screen and (max-width: 900px) {
+//         & {
+//             height: auto;
+//         }
+//     }
+// }
+
+.full-img-bg {
     background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero.jpg);
     background-size: cover;
     background-position: center;
-    height: 70vh;
-}
+    height: 100vh;
+    padding-bottom: 50px;
 
+    @media only screen and (max-width: 900px) {
+        & {
+            height: auto;
+        }
+    }
+}
 
 .pt-10 {
     padding-top: 6rem!important;
@@ -15,7 +33,6 @@
     color: white;
     display: flex;
     flex-direction: column;
-    height: 92%;
 }
 
 
@@ -53,7 +70,6 @@
     text-align: center;
     padding-top: 50px;
     padding-bottom: 30px;
-    // color: white;
 }
 .section2 {
     display: flex;
@@ -61,7 +77,7 @@
     justify-content: space-between; 
     .box {
         border: 1px solid #e8e8e8;
-        width: 33%;
+        width: 30%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -69,8 +85,9 @@
         background-color: white;
         padding-top: 10px;
         padding-bottom: 10px;
-        // box-shadow: .5rem .5rem rgba(0, 0, 0, 0.2);    
-        box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+        border: 1px solid #007bff;
+        border-radius: 5px;
+        transition: background-color 0.4s, border-color 0.4s, color 0.4s;
 
         img {
             width: 50px;
@@ -84,7 +101,7 @@
 
     }
     .box:hover {
-        background: #007bff;
+        background-color: #007bff;
         border-color: #007bff;
         color: white;
     }
@@ -92,7 +109,6 @@
     .content {
         color: red;
         align-self: center;
-        // display: flex;
     }
 }
 
@@ -277,7 +293,7 @@ footer {
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 550px) {
     .landing {
         height: 100vh;
     }
@@ -287,25 +303,4 @@ footer {
     .header {
         font-size: 3rem;
     }
-
-    // .section2 .box {
-    //     width: 80%;
-    //     margin-left: auto;
-    //     margin-right: auto;
-    //     // display: flex;
-    //     // flex-direction: row;
-
-    //     .icon-wrapper {
-    //         margin-left: 20px;
-    //     }
-
-    //     a {
-    //         display: flex;
-    //     }
-    //     h3 {
-    //         align-self: center;
-    //         margin-left: 20px;
-    //         text-align: left;
-    //     }
-    // }
 }
