--- a/src/components/layout/navbar/navbar.scss
+++ b/src/components/layout/navbar/navbar.scss
@@ -1,20 +1,43 @@
-.navbar-nav .nav-item .nav-link {
-    color: white;
-    margin: 2px;
-    text-align: center;
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 5px;
+    padding-bottom: 5px;;
+
+    .brand-logo {
+        color: white;
+        font-size: 2.7rem;
+    }
+    .brand-logo:hover {
+        text-decoration: none;
+    }
+
+
+
+    .nav-links-container {
+        display: flex;
+        justify-content: space-between;
+        
+        .nav-link {
+            color: white;
+            transition: all .2s ease-in-out;
+        }
+
+        .nav-link:hover {
+            transform: scale(1.1, 1.1);
+        }
+
+    }
+
+    @media only screen and (max-width: 767px) {
+        .nav-link.email {
+            display: none;
+        }
+    }
 }
 
-.navbar {
-    // position: fixed;
-    width: 100%;
-    height: 8%;
-}
-
-.navbar .navbar-nav {
-    border-bottom: 2px solid white;
-}
-
-.navbar .navbar-brand {
-    color: white;
-    font-size: 3.2rem;
+.auth-nav-color {
+    // background: #362066c9; 
+    // background-color: #007bff;
+    background-color: #00448B;
 }
