--- a/src/index.scss
+++ b/src/index.scss
@@ -15,4 +15,5 @@ body {
     font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
     background: #F6F6F6;
+    /* background-color: #e5dced; */
 }
