--- a/src/components/layout/Landing/landing.scss
+++ b/src/components/layout/Landing/landing.scss
@@ -1,16 +1,3 @@
-// .landing {
-//     background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero.jpg);
-//     background-size: cover;
-//     background-position: center;
-//     height: 100vh;
-
-//     @media only screen and (max-width: 900px) {
-//         & {
-//             height: auto;
-//         }
-//     }
-// }
-
 .full-img-bg {
     background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero.jpg);
     background-size: cover;
@@ -106,10 +93,10 @@
         color: white;
     }
 
-    .content {
-        color: red;
-        align-self: center;
-    }
+    // .content {
+    //     color: red;
+    //     align-self: center;
+    // }
 }
 
 
@@ -126,12 +113,9 @@
 
     .col-1-of-2 {
         width: 48%;
-        
         display: flex;
         flex-direction: column;
         justify-content: center;
-        // border: 1px solid blue;
-
         @media only screen and (max-width: 767px) {
             & {
                 width: 100%;
@@ -205,7 +189,6 @@
 // Footer 
 footer {
     background: #181818;
-    // background: #362066;
     color: #d0d0df;
     padding: 20px 0;
 
@@ -276,7 +259,6 @@ footer {
 
 
 // Mobile
-
 @media only screen and (max-width: 992px) {
     .landing {
         height: 568px;
