chore(images): change landing page images to svgs

--- a/src/components/layout/Landing/landing.scss
+++ b/src/components/layout/Landing/landing.scss
@@ -171,10 +171,19 @@
     .section-4-box {
         width: 48%;
 
+        .svg-container {
+            max-width: 530px;
+            max-height: 330px;
+
+            width: 530px;
+            height: 330px;
+        }
+
         img {
             width: 100%;
             border-radius: 8px;
-            height: auto;
+            // height: auto;
+            height: 100%;
         }
 
         h3 {
