--- a/src/components/layout/landing/landing.scss
+++ b/src/components/layout/landing/landing.scss
@@ -4,6 +4,7 @@
     background-position: center;
     height: 100vh;
     padding-bottom: 50px;
+    // background-position: bottom right;
 
     @media only screen and (max-width: 900px) {
         & {
