Dashboard - fetch user accounts

--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -69,15 +69,15 @@
             color: #00448B;
         }
         .open-account {
-            display: flex;
-            border: 1px solid #00448B;
-            width: 250px;
-            justify-content: center;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 50px;
-            padding: 40px;
-            border-radius: 10px; 
+            // display: flex;
+            // border: 1px solid #00448B;
+            // width: 250px;
+            // justify-content: center;
+            // margin-left: auto;
+            // margin-right: auto;
+            // margin-top: 50px;
+            // padding: 40px;
+            // border-radius: 10px; 
             // // box-shadow: .5rem .5rem rgba(0, 0, 0, 0.2);    
             // box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
     
