--- a/src/components/layout/landing/landing.scss
+++ b/src/components/layout/landing/landing.scss
@@ -2,15 +2,20 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.589), rgba(0, 0, 0, 0.76)), url(../../../img/hero.jpg);
     background-size: cover;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
     height: 100vh;
     padding-bottom: 50px;
     // background-position: bottom right;
 
-    @media only screen and (max-width: 900px) {
-        & {
-            height: auto;
-        }
-    }
+    // @media only screen and (max-width: 900px) {
+    //     & {
+    //         // height: auto;
+    //         width: 90%;
+    //     }
+    // }
 }
 
 .pt-10 {
@@ -21,18 +26,47 @@
     color: white;
     display: flex;
     flex-direction: column;
+    margin-top: 6rem;
+
+    @media only screen and (max-width: 767px) {
+        & {
+            margin-top: 0rem;
+            width: 90%; 
+        }
+    }
+
+    @media only screen and (max-width: 500px) {
+        & {
+            margin-top: 6rem;
+        }
+    }
 }
 
 
 .header-container {
-    width: 50%;
+    width: 75%;
     margin: 0 auto; 
     text-align: center;
+    
+    @media only screen and (max-width: 767px) {
+        & {
+            margin-top: 0rem;
+            width: 90%; 
+        }
+    }
+
+    @media only screen and (max-width: 500px) {
+        & {
+            // margin-top: 6rem;
+        }
+    }
 }
 .header {
-    font-size: 4.8rem;
-    margin-top: 70px;
-    margin-bottom: 20px;
+    font-size: 4.2rem;
+    font-weight: 300;
+    // margin-top: 70px;
+    padding-bottom: 10px;
+    margin: 0 0;
     p {
         font-size: 18px;
         margin-bottom: 30px;
@@ -273,9 +307,9 @@ footer {
     .landing {
         height: 568px;
     }
-    .header-container {
-        width: 70%;
-    }
+    // .header-container {
+    //     width: 70%;
+    // }
     .header {
         font-size: 3.5rem;
     }
